RestaurantManagement/src/objects/Offers__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Food_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Food Item</label>
        <referenceTo>Food_Item__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offer_Image__c</fullName>
        <label>Offer Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Offers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>